--- a/roadeye-domain/roadeye-domain-core/build.gradle
+++ b/roadeye-domain/roadeye-domain-core/build.gradle
@@ -9,6 +9,11 @@ dependencies {
 
     implementation("org.springframework.amqp:spring-amqp")
 
+    implementation("io.github.openfeign.querydsl:querydsl-jpa:6.12")
+    annotationProcessor("io.github.openfeign.querydsl:querydsl-apt:6.12:jakarta")
+    annotationProcessor("jakarta.persistence:jakarta.persistence-api")
+    annotationProcessor("jakarta.annotation:jakarta.annotation-api")
+
     runtimeOnly("com.h2database:h2:2.2.220")
 
     testImplementation("org.springframework.boot:spring-boot-starter-test")
