chore: 테스트 로그 레벨 조정

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ allprojects {
         jvmArgs += "-XX:+EnableDynamicAgentLoading"
         jvmArgs += "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}"
 
+        jvmArgs += "-Dspring.profiles.include=test"
+
         useJUnitPlatform()
     }
 }
