--- a/.github/workflows/dev-test-on-pr.yml
+++ b/.github/workflows/dev-test-on-pr.yml
@@ -35,7 +35,7 @@ jobs:
             ~/.gradle/wrapper
 
       - name: Test with Gradle
-        run: ./gradlew --info test
+        run: ./gradlew --quite test
 
       - name: Publish Unit Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
