--- a/roadeye-emulator/package.json
+++ b/roadeye-emulator/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
     "prepare": "node scripts/prepare.js",
     "k6:1": "k6 run src/k6/1.ignition-on.ts",
     "k6:2": "k6 run src/k6/2.cycle.ts",
@@ -14,15 +18,31 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "devDependencies": {
-    "@types/k6": "^1.0.2",
-    "@types/node": "^24.0.3",
-    "browserify": "^17.0.1"
-  },
   "dependencies": {
     "geolocation-utils": "^1.2.6",
-    "install": "^0.13.0",
-    "npm": "^11.4.2",
+    "immer": "^10.1.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "uuid": "^3.4.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.25.0",
+    "@types/k6": "^1.0.2",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "autoprefixer": "^10.4.21",
+    "browserify": "^17.0.1",
+    "eslint": "^9.25.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.30.1",
+    "vite": "^6.3.5"
   }
 }
