--- a/roadeye-emulator/tsconfig.json
+++ b/roadeye-emulator/tsconfig.json
@@ -1,28 +1,11 @@
 {
-  "compilerOptions": {
-    "target": "es2017",
-    "lib": [
-      "es2017",
-      "dom"
-    ],
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noEmit": true,
-    "allowImportingTsExtensions": true,
-    "allowJs": true,
-    "checkJs": false,
-    "resolveJsonModule": true,
-    "rootDir": "./src",
-    "outDir": "./dist"
-  },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
+    }
   ]
 }
