feat: consumer에 web 추가해서 actuator 노출 healthcheck 용도임

--- a/roadeye-consumer/build.gradle
+++ b/roadeye-consumer/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     implementation(project(":roadeye-domain:roadeye-domain-core"))
     implementation(project(":roadeye-monitoring"))
 
+    implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-json")
     implementation("org.springframework.boot:spring-boot-starter-amqp")
     runtimeOnly("com.mysql:mysql-connector-j")
