--- a/settings.gradle
+++ b/settings.gradle
@@ -5,7 +5,7 @@ plugins {
 rootProject.name = 'Roadeye'
 
 include 'roadeye-api:roadeye-api-common'
-include 'roadeye-api:roadeye-api-hq'
+include 'roadeye-api-hq'
 include 'roadeye-api:roadeye-api-hub'
 
 include 'roadeye-consumer'
