--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,7 @@ rootProject.name = 'Roadeye'
 
 include 'roadeye-api:roadeye-api-common'
 include 'roadeye-api-hq'
-include 'roadeye-api:roadeye-api-hub'
+include 'roadeye-api-hub'
 
 include 'roadeye-consumer'
 
