--- a/roadeye-api-hub/build.gradle
+++ b/roadeye-api-hub/build.gradle
@@ -1,5 +1,4 @@
 dependencies {
-    implementation(project(":roadeye-api:roadeye-api-common"))
     implementation(project(":roadeye-domain:roadeye-domain-core"))
 
     implementation("org.springframework.boot:spring-boot-starter-web")
@@ -8,6 +7,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-amqp")
     runtimeOnly("com.mysql:mysql-connector-j")
 
+    testRuntimeOnly("com.h2database:h2")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation(testFixtures(project(":roadeye-domain:roadeye-domain-core")))
     testImplementation 'org.springframework.amqp:spring-rabbit-test'
