refactor: api-hub 모듈 이름을 hub로 변경

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,5 @@ rootProject.name = 'Roadeye'
 
 include 'core'
 include 'web-api'
-include 'roadeye-api-hub'
+include 'hub'
 include 'roadeye-consumer'
