--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+    implementation(project(":commons"))
+
     implementation("com.fasterxml.jackson.core:jackson-annotations")
     implementation("com.fasterxml.jackson.core:jackson-databind")
     implementation("jakarta.validation:jakarta.validation-api")
