--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     implementation(project(":commons"))
 
+    implementation("org.springframework:spring-web")
     implementation("com.fasterxml.jackson.core:jackson-annotations")
     implementation("com.fasterxml.jackson.core:jackson-databind")
     implementation("jakarta.validation:jakarta.validation-api")
