refactor: core 모듈의 h2 의존성을 testRuntimeOnly 로 변경

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -15,7 +15,6 @@ dependencies {
     annotationProcessor("jakarta.persistence:jakarta.persistence-api")
     annotationProcessor("jakarta.annotation:jakarta.annotation-api")
 
-    runtimeOnly("com.h2database:h2:2.2.220")
-
+    testRuntimeOnly("com.h2database:h2:2.2.220")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
