--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -3,8 +3,8 @@
 name: "roadeye"
 
 services:
-  api-web:
-    image: api-web:latest
+  api:
+    image: roadeye/api:latest
     ports:
       - "8080:8080"
     env_file:
@@ -12,8 +12,13 @@ services:
     depends_on:
       - mysql
       - rabbitmq
-  api-hub:
-    image: roadeye-api-hub:latest
+    healthcheck:
+      test: [ "CMD", "curl" , "http://localhost:8080/actuator/health" ]
+      timeout: 10s
+      retries: 5
+      start_period: 10s
+  hub:
+    image: roadeye/hub:latest
     ports:
       - "8081:8080"
     env_file:
@@ -21,19 +26,23 @@ services:
     depends_on:
       - mysql
       - rabbitmq
+    healthcheck:
+      test: [ "CMD", "curl" , "http://localhost:8080/actuator/health" ]
+      timeout: 10s
+      retries: 5
+      start_period: 10s
   consumer:
-    image: roadeye-consumer:latest
+    image: roadeye/consumer:latest
     depends_on:
       - mysql
       - rabbitmq
     env_file:
       - local.env
-  bootstrapper:
-    image: roadeye-bootstrapper:latest
-    depends_on:
-      - mysql
-    env_file:
-      - local.env
+    healthcheck:
+      test: [ "CMD", "curl" , "http://localhost:8080/actuator/health" ]
+      timeout: 10s
+      retries: 5
+      start_period: 10s
   mysql:
     image: mysql:8.0
     environment:
@@ -45,6 +54,11 @@ services:
       - ./data/mysql:/var/lib/mysql
     ports:
       - "13306:3306"
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 30s
+      retries: 5
+      start_period: 30s
   rabbitmq:
     image: rabbitmq:4.1.1-management
     ports:
@@ -56,3 +70,9 @@ services:
       - RABBITMQ_DEFAULT_VHOST=roadeye
       - RABBITMQ_DEFAULT_USER=roadeye
       - RABBITMQ_DEFAULT_PASS=roadeye
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 10s
