--- a/example/local.env
+++ b/example/local.env
@@ -20,3 +20,6 @@ SPRING_RABBITMQ_USERNAME=roadeye
 SPRING_RABBITMQ_PASSWORD=roadeye
 SPRING_RABBITMQ_TEMPLATE_EXCHANGE=roadeye.direct
 SPRING_RABBITMQ_TEMPLATE_ROUTING_KEY=roadeye
+
+THC_PORT=8080
+THC_PATH=/actuator/health
