--- a/emulator/package.json
+++ b/emulator/package.json
@@ -23,6 +23,7 @@
     "immer": "^10.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
