--- a/emulator/package.json
+++ b/emulator/package.json
@@ -22,10 +22,12 @@
     "@tailwindcss/vite": "^4.1.11",
     "geolocation-utils": "^1.2.6",
     "immer": "^10.1.1",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-kakao-maps-sdk": "^1.2.0",
     "react-router-dom": "^7.6.3",
+    "use-immer": "^0.11.0",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
