--- a/emulator/package.json
+++ b/emulator/package.json
@@ -7,12 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "prepare": "node scripts/prepare.cjs",
-    "k6:1": "k6 run src/k6/1.ignition-on.ts",
-    "k6:2": "k6 run src/k6/2.cycle.ts",
-    "k6:3": "k6 run src/k6/3.ignition-off.ts",
-    "k6:4": "k6 run src/k6/4.emulator.ts"
+    "build:k6": "node esbuild.config.k6.mjs",
+    "k6:4": "npm run build:k6 && k6 run dist/emulator.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +16,7 @@
   "type": "module",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "dateformat": "^5.0.3",
     "geolocation-utils": "^1.2.6",
     "immer": "^10.1.1",
     "lucide-react": "^0.525.0",
@@ -32,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/dateformat": "^5.0.3",
     "@types/k6": "^1.0.2",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
@@ -40,6 +38,7 @@
     "@vitejs/plugin-react-swc": "^3.9.0",
     "autoprefixer": "^10.4.21",
     "browserify": "^17.0.1",
+    "dotenv": "^17.0.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
