--- a/emulator/docker-compose.yml
+++ b/emulator/docker-compose.yml
@@ -1,8 +1,11 @@
-name: roadeye-emulator
+name: roadeye
+
 services:
   navigation:
     image: israelhikingmap/graphhopper
-    command: [ "--url", "https://download.geofabrik.de/asia/south-korea-latest.osm.pbf", "--host", "0.0.0.0" ]
+    command: [ "--url", "https://download.geofabrik.de/asia/south-korea-latest.osm.pbf" ]
     ports:
       - 8989:8989
       - 8990:8990
+    volumes:
+      - ./graphhopper.sh:/graphhopper/graphhopper.sh
