--- a/emulator/package.json
+++ b/emulator/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "dateformat": "^5.0.3",
     "geolocation-utils": "^1.2.6",
@@ -22,10 +23,13 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.59.0",
     "react-kakao-maps-sdk": "^1.2.0",
     "react-router-dom": "^7.6.3",
     "use-immer": "^0.11.0",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "zod": "^3.25.67",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
