--- a/emulator/package.json
+++ b/emulator/package.json
@@ -26,6 +26,8 @@
     "react-hook-form": "^7.59.0",
     "react-kakao-maps-sdk": "^1.2.0",
     "react-router-dom": "^7.6.3",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10",
     "use-immer": "^0.11.0",
     "uuid": "^3.4.0",
     "zod": "^3.25.67",
@@ -38,6 +40,7 @@
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-window": "^1.8.8",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "autoprefixer": "^10.4.21",
