--- a/core/src/test/resources/application-test.yml
+++ b/core/src/test/resources/application-test.yml
@@ -1,9 +1,16 @@
 spring:
+  main:
+    banner-mode: off
+  datasource:
+    url: jdbc:h2:mem:testdb;MODE=MySQL;DATABASE_TO_UPPER=TRUE;DB_CLOSE_DELAY=-1
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
   jpa:
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
-        show_sql: false
+        show_sql: true
 
 logging:
   level:
