--- a/.github/workflows/deploy-dev-docker.yml
+++ b/.github/workflows/deploy-dev-docker.yml
@@ -42,18 +42,18 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
-      - name: Build Docker Image
+      # - name: Build Docker Image
+      #   id: build
+      #   run: |
+      #     ./gradlew --quiet --build-cache \
+      #       :${{ matrix.module }}:buildDockerImage
+
+      - name: Build Module
         id: build
         run: |
           ./gradlew --quiet --build-cache \
-            :${{ matrix.module }}:buildDockerImage
-
-      #      - name: Build Module
-      #        id: build
-      #        run: |
-      #          ./gradlew --quiet --build-cache \
-      #            :${{ matrix.module }}:bootBuildImage \
-      #            --imageName=${{ env.DOCKER_REPO }}/${{ env.DOCKER_IMAGE }}:latest
+            :${{ matrix.module }}:bootBuildImage \
+            --imageName=${{ env.DOCKER_IMAGE }}:latest
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
