--- a/emulator/package.json
+++ b/emulator/package.json
@@ -8,6 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "build:k6": "node esbuild.config.k6.mjs",
+    "k6:nginx": "npm run build:k6 && k6 run dist/nginx.js",
+    "k6:2": "npm run build:k6 && k6 run dist/2.cyclelog.js",
+    "k6:3": "npm run build:k6 && k6 run dist/3.tracky.js",
     "k6:4": "npm run build:k6 && k6 run dist/emulator.js"
   },
   "keywords": [],
@@ -15,9 +18,11 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@elysiajs/node": "^1.3.0",
     "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "dateformat": "^5.0.3",
+    "elysia": "^1.3.5",
     "geolocation-utils": "^1.2.6",
     "immer": "^10.1.1",
     "lucide-react": "^0.525.0",
@@ -37,7 +42,7 @@
     "@eslint/js": "^9.25.0",
     "@types/dateformat": "^5.0.3",
     "@types/k6": "^1.0.2",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-window": "^1.8.8",
@@ -50,8 +55,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "mongodb": "^6.8.0",
+    "mysql2": "^3.14.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.10",
+    "tsx": "^4.20.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
